# Knowledge-Augmented-Image-Contrastive-Clustering

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/interim/: .gitignore
data/raw/: .gitignore  images.tar.gz.dvc  triples.csv.dvc
kaicc/: cluster_image_vs_image.py  cluster_image_vs_image_raw.py  cluster_image_vs_text.py  cluster_image_vs_text_raw.py  cluster_img_vs_txt_1_proj.py  cluster_img_vs_txt_raw_2_proj.py  cluster_trans_img_vs_trans_img_1_proj.py  cluster_trans_img_vs_trans_img_raw_1_proj.py  cluster_trans_img_vs_txt_1_proj.py  cluster_trans_img_vs_txt_raw_2_proj.py  cluster_transformed_image_vs_text.py  cluster_transformed_image_vs_text_raw.py  enumerate_entities.py  evaluate.py  filter_triples.py  generate_node_texts.py  preprocess.py  split_labels.py  training.py
kaicc/clustering/: clustering.py  training.py
kaicc/clustering/modules/: dataset.py  loss.py  model.py
models/: .gitignore  cluster_trans_img_vs_trans_img_1_proj.txt  cluster_trans_img_vs_trans_img_raw_1_proj.txt  img_vs_txt_1_proj.txt
