[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "knowledge_augmented_image_contrastive_clustering"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Gianmarco Turchiano" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["knowledge_augmented_image_contrastive_clustering"]
include = ["pyproject.toml", "knowledge_augmented_image_contrastive_clustering/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["knowledge_augmented_image_contrastive_clustering"]
force-sort-within-sections = true

